Add Speak Burner to Me lyrics and metadata

--- a/albums/ashes-and-echoes/tracks/speak-burner-to-me.html
+++ b/albums/ashes-and-echoes/tracks/speak-burner-to-me.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Speak Burner to Me | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Speak Burner to Me riffs on playa slang and radio chatter over bouncing synth lines.">
+  <meta name="description" content="A fast-talking Playa glossary in song form — a call-and-response tour through MOOP, Darkwads, Theme Camps, Arctica, DPW, and all the weird acronyms that make Black Rock City feel like another language.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -29,9 +29,9 @@
     <section class="hero">
       <img src="/assets/img/tracks/speak-burner-to-me.jpg" alt="Cover art for Speak Burner to Me">
       <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 5</p>
+        <p class="meta">Ashes and Echoes — Track 5 · 3:43</p>
         <h1>Speak Burner to Me</h1>
-        <p>A dance-floor love letter to the slang that only makes sense beyond the gate.</p>
+        <p>“Speak Burner to Me” is a fast-talking Playa glossary in song form — a call-and-response tour through MOOP, Darkwads, Theme Camps, Arctica, DPW, and all the weird acronyms and in-jokes that make Black Rock City feel like another language.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
@@ -39,10 +39,90 @@
       </div>
     </section>
 
+    <section class="section" aria-labelledby="about-heading">
+      <h2 id="about-heading">About this track</h2>
+      <p>
+        “Speak Burner to Me” is the Black Rock City phrasebook turned into a track — a playful,
+        high-density glossary of Burner slang, acronyms, and inside jokes. It’s half language lesson,
+        half knowing wink: if you can sing along, you’re probably already Home.
+      </p>
+    </section>
+
     <section class="section" aria-labelledby="lyrics-heading">
       <h2 id="lyrics-heading">Lyrics</h2>
       <pre class="lyrics-block">
-Lyrics coming soon.
+Playya… yeah
+No, not playya — it’s Playa (say it right)
+You ready?
+Let’s go…
+
+Welcome to Home, it’s That Thing in the Desert
+You’re a Burr-gin no more once you roll in the dust
+Grab your ticket, greet the Greeter, ring the bell, shed your name
+Get a Playa one instead — now you’re in the game
+We don’t do the ‘Default World’ — no commerce, no shame
+Just dust, art, fire, and a Temple in flames
+From 10 to 2, from thunder to flashy
+This ain’t no festival, it’s full-on batshit classy
+
+Speak Burner to me — define your tribe
+Say “MOOP” not “trash,” let the sparkle slide
+Speak Burner to me — in dust we trust
+From Arctica ice to the Temple dust
+Say “radical,” say “now,” say “Free”
+If you know, you know — speak Burner to me
+(yeah… whoooa…)
+
+It’s Civic with Consent, and Decom with feels
+It’s Line Walks, Leave No Trace, bacon meals on wheels
+It’s Mutant Vehicles cruisin’ loud in the night
+From Robo Heart drops to a dust bike flight
+Lamplighters glowin’, the Fluffers bring booze
+Java Cow says “cream or sugar?” — you choose
+Shirtcockers struttin’, Sparkle Ponies pout
+If your camp’s got a fence, then your vibe’s sold out
+
+What’s MOOP? (Matter Out Of Place!)
+What’s a Darkwad? (Unlit in your face!)
+Who’s a Wook? (Begs and bakes and mooches)
+What’s a Solifuge? (Fast with too many leggy scooches)
+What’s Piss Clear? (Hydrate ‘til you pee!)
+What’s TTITD? (That Thing in the D!)
+Who’s the Man? (Not the cops, the one we burn!)
+What’s a Theme Camp? (Where weirdos take their turn!)
+
+BRC’s got Avenues, from 2 to 10
+Streets from A to L — but no straight lines, friend
+Arctica slings ice at 3, 6, and 9
+DPW builds it all, then drinks it all in time
+Rangers roam gently, BMIR calls storms
+The DMZ pounds bass while the Man transforms
+The Fallopian Tubes lead us in like a womb
+But Exodus gonna trap you, bring snacks, resume
+
+Speak Burner to me — throw dust like slang
+Radical Inclusion in a no-pants gang
+Speak Burner to me — ten principles high
+With a pants cannon ready and glitter in your eye
+Say “Flame Effect,” say “Foe-moe,” say “Free”
+Welcome Home, mycal — now speak Burner to me 
+(yeah! yaaaah!)
+
+BORG! BLM! MOOP it up, then do it again
+EL Wire glow, Esplanade show
+Mutant Vehicle rides in a giant rhino whoa
+RV Fortress? That’s a no
+SCUM of the Earth? Plug-and-Play bro
+Collexodus, Rebar, P&amp;P
+White-Out storm? You can't see me!
+Reality Bends, Sparkle Lens
+Muggles don’t get it — but this never ends
+
+
+So if someone asks you where you’ve been...
+Just whisper, “The Playa.”
+And if they don’t get it...
+Speak burner to them.
       </pre>
     </section>
   </main>
@@ -71,18 +151,21 @@ Lyrics coming soon.
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Electronic", "Burning Man"],
+    "position": 5,
+    "genre": ["Folk", "Electronic", "Burning Man", "Glossary Song"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/speak-burner-to-me.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
     "sameAs": [
       "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
     ],
+    "description": "\"Speak Burner to Me\" is a fast-talking Playa glossary in song form — a call-and-response tour through MOOP, Darkwads, Theme Camps, Arctica, DPW, and all the weird acronyms and in-jokes that make Black Rock City feel like another language. If you know, you know.",
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Playya… yeah\nNo, not playya — it’s Playa (say it right)\nYou ready?\nLet’s go…\n\nWelcome to Home, it’s That Thing in the Desert\nYou’re a Burr-gin no more once you roll in the dust\nGrab your ticket, greet the Greeter, ring the bell, shed your name\nGet a Playa one instead — now you’re in the game\nWe don’t do the ‘Default World’ — no commerce, no shame\nJust dust, art, fire, and a Temple in flames\nFrom 10 to 2, from thunder to flashy\nThis ain’t no festival, it’s full-on batshit classy\n\nSpeak Burner to me — define your tribe\nSay \"MOOP\" not \"trash,\" let the sparkle slide\nSpeak Burner to me — in dust we trust\nFrom Arctica ice to the Temple dust\nSay \"radical,\" say \"now,\" say \"Free\"\nIf you know, you know — speak Burner to me\n(yeah… whoooa…)\n\nIt’s Civic with Consent, and Decom with feels\nIt’s Line Walks, Leave No Trace, bacon meals on wheels\nIt’s Mutant Vehicles cruisin’ loud in the night\nFrom Robo Heart drops to a dust bike flight\nLamplighters glowin’, the Fluffers bring booze\nJava Cow says \"cream or sugar?\" — you choose\nShirtcockers struttin’, Sparkle Ponies pout\nIf your camp’s got a fence, then your vibe’s sold out\n\nWhat’s MOOP? (Matter Out Of Place!)\nWhat’s a Darkwad? (Unlit in your face!)\nWho’s a Wook? (Begs and bakes and mooches)\nWhat’s a Solifuge? (Fast with too many leggy scooches)\nWhat’s Piss Clear? (Hydrate ‘til you pee!)\nWhat’s TTITD? (That Thing in the D!)\nWho’s the Man? (Not the cops, the one we burn!)\nWhat’s a Theme Camp? (Where weirdos take their turn!)\n\nBRC’s got Avenues, from 2 to 10\nStreets from A to L — but no straight lines, friend\nArctica slings ice at 3, 6, and 9\nDPW builds it all, then drinks it all in time\nRangers roam gently, BMIR calls storms\nThe DMZ pounds bass while the Man transforms\nThe Fallopian Tubes lead us in like a womb\nBut Exodus gonna trap you, bring snacks, resume\n\nSpeak Burner to me — throw dust like slang\nRadical Inclusion in a no-pants gang\nSpeak Burner to me — ten principles high\nWith a pants cannon ready and glitter in your eye\nSay \"Flame Effect,\" say \"Foe-moe,\" say \"Free\"\nWelcome Home, mycal — now speak Burner to me \n(yeah! yaaaah!)\n\nBORG! BLM! MOOP it up, then do it again\nEL Wire glow, Esplanade show\nMutant Vehicle rides in a giant rhino whoa\nRV Fortress? That’s a no\nSCUM of the Earth? Plug-and-Play bro\nCollexodus, Rebar, P&amp;P\nWhite-Out storm? You can't see me!\nReality Bends, Sparkle Lens\nMuggles don’t get it — but this never ends\n\n\nSo if someone asks you where you’ve been...\nJust whisper, “The Playa.”\nAnd if they don’t get it...\nSpeak burner to them."
     }
   }
   </script>
