--- a/albums/ashes-and-echoes/tracks/weird-steel.html
+++ b/albums/ashes-and-echoes/tracks/weird-steel.html
@@ -1,90 +1,122 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weird Steel | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Weird Steel is a clanging industrial groove inspired by art-car welding at dawn.">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <meta charset="utf-8">
+  <title>Weird Steel – Mycal</title>
   <link rel="stylesheet" href="/assets/css/style.css">
-</head>
-<body>
-  <header>
-    <nav class="navbar" aria-label="Primary">
-      <a class="logo" href="/">
-        <span>music.mycal.net</span>
-      </a>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
-      </div>
-    </nav>
-  </header>
 
-  <main>
-    <section class="hero">
-      <img src="/assets/img/tracks/weird-steel.jpg" alt="Cover art for Weird Steel">
-      <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 6</p>
-        <h1>Weird Steel</h1>
-        <p>Hammered percussion and metallic bass lines for anyone who has ever tightened a bolt at sunrise.</p>
-        <div class="button-row">
-          <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
-          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section" aria-labelledby="lyrics-heading">
-      <h2 id="lyrics-heading">Lyrics</h2>
-      <pre class="lyrics-block">
-Lyrics coming soon.
-      </pre>
-    </section>
-  </main>
-
-  <footer>
-    <div class="footer-inner">
-      <div>© 2025 Mycal Music</div>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/">Home</a>
-      </div>
-    </div>
-  </footer>
-
+  <!-- JSON-LD for this track -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
     "name": "Weird Steel",
-    "duration": "PT3M42S",
-    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Electronic", "Burning Man"],
+    "duration": "PT3M42S",
+    "position": 6,
+    "genre": ["Folk", "Electronic", "Burning Man", "Camp Anthem"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/weird-steel.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
+    "description": "\"Weird Steel\" is the Reared in Steel camp anthem — a love letter to Petaluma-forged art, Rhino Redemption, couches in the sky, grilled cheese at sunrise, and the fire-bent crew holding down 9 & A. It’s part roll call, part legend, and all sparks.",
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel"
     }
   }
   </script>
+</head>
+<body>
+  <main class="track-page">
+    <header class="track-header">
+      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
+      <h1>Weird Steel</h1>
+      <p>Track 6 · 3:42 · Ashes and Echoes — Songs from the Playa</p>
+    </header>
+
+    <section class="track-media">
+      <img src="/assets/img/tracks/weird-steel.jpg"
+           alt="Cover art for Weird Steel"
+           class="track-image">
+
+      <div class="track-links">
+        <!-- Replace these href values with real links -->
+        <a href="#" class="btn">Listen on Spotify</a>
+        <a href="#" class="btn">Bandcamp</a>
+        <a href="#" class="btn">YouTube Music</a>
+      </div>
+    </section>
+
+    <section class="track-description">
+      <h2>About this track</h2>
+      <p>
+        “Weird Steel” is the Reared in Steel anthem — forged in Petaluma, broadcast from 9 &amp; A.
+        It’s a shout-out to Rhino Redemption, Medusa, the Fire Kathedral, GUMA, couches in the sky,
+        grilled cheese, slushies, MOOP strike teams, and the dusty crew that keeps building year
+        after year. Camp lore turned into a sing-along.
+      </p>
+    </section>
+
+    <section class="lyrics">
+      <h2>Lyrics</h2>
+      <pre>
+This one's forged in Petaluma — born to burn.  
+Live from 9 &amp; A — WEIRD STEEL!  
+
+Weird Steel forged at 9 &amp; A  
+Right on the edge where the fire gods play  
+Step through the portal where the weird ones stay  
+We build with flame — we don’t play halfway  
+
+Couch in the sky, grilled cheese in hand  
+Cookies at noon, propane unplanned  
+Come find us tomorrow — or better, today  
+Weird Steel’s got the bar and a burner buffet (whoooa!)
+
+We are Reared in Steel — Petaluma born (yeah!)  
+Rhino Redemption with a fire-spitting horn (let it rise!)  
+(Target’s open!) (Flower Tower glows!)  
+We light the night where the fire wind blows (whoooa!)  
+
+Kevin sparks the sky,  
+Dave’s the fix-it guy  
+Andre’s got the plan and the best tan alive (yeah!)  
+Weird Steel! (Weird Steel!) — let it burn, let it rise  
+Weird Steel! (Weird Steel!) — see the dust in our eyes (whoooa!)
+
+We gave you Medusa, and the Fire Kathedral’s flare  
+Love Pod Forest, where sparks fill the air  
+Ladybug rides with a spark and a smile  
+Harper's GUMA glows, wrapped in style (fire!)  
+
+Slushies and Reiki, cookies on cue  
+Weddings, sky rides, and a century too  
+Fifty feet high — a couch to the stars  
+We don’t just party — we build art cars 
+
+Strike team’s ready, MOOPin’ in stride  
+Rhino’s groovin’ while the flames fly wide (boom!)  
+Advice on bread, truth on toast (mmm-hmm)  
+We gift it loud — that’s what we do most (yeah!)
+
+We are Reared in Steel — forged in love (yeah!)  
+From the Petaluma hills to the stars above  
+Brass Ring spins, and our stories ignite  
+Weird Steel rides through the magic night  
+
+Weird Steel! (Weird Steel!) — let it burn, let it rise  
+Weird Steel! (Weird Steel!) — we got stars in our eyes (whoooa!)
+      </pre>
+    </section>
+  </main>
 </body>
 </html>
