Add full Dust to Dust track content

--- a/albums/ashes-and-echoes/tracks/dust-to-dust.html
+++ b/albums/ashes-and-echoes/tracks/dust-to-dust.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dust to Dust (The Playa Sucks) | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Dust to Dust (The Playa Sucks) is a gritty singalong about headwinds, whiteouts, and loving it anyway.">
+  <meta name="description" content="A sharp-edged roast of influencer camps, plug-and-play culture, and wellness-washed decadence on the playa.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -31,7 +31,7 @@
       <div class="hero-content">
         <p class="meta">Ashes and Echoes — Track 7</p>
         <h1>Dust to Dust (The Playa Sucks)</h1>
-        <p>Distorted guitars and stomp-claps about surrendering to dust storms and laughing through it.</p>
+        <p>A satire-fueled anthem calling out plug-and-play decadence while still loving the dust.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
@@ -39,10 +39,122 @@
       </div>
     </section>
 
+    <section class="section" aria-labelledby="about-heading">
+      <h2 id="about-heading">About this track</h2>
+      <p>
+        “Dust to Dust (The Playa Sucks)” is a sharp-edged roast of influencer culture, plug-and-play camps,
+        and wellness-washed decadence on the Playa. It’s part love letter, part intervention, calling out the
+        carbon scams, VIP tents, and rich-kid junk while still ending with the classic burner mantra: it was
+        better last year.
+      </p>
+    </section>
+
     <section class="section" aria-labelledby="lyrics-heading">
       <h2 id="lyrics-heading">Lyrics</h2>
       <pre class="lyrics-block">
-Lyrics coming soon.
+Welcome to Black Rock City.
+Population: 70,000 egos and one giant match. (yaaaah!)
+
+They came for the ’Gram, left their brains at home,
+Bombshell bras on a dust-swept roam.
+Latex boots in apocalypse heat,
+Worshipping tech bros for a VIP seat.
+Chokers tight, and pupils wide,
+They sparkle hard with no soul inside.
+Sniffin’ GHB in the LED stew,
+Snappin’ pics with the Mayan Warrior crew. (yaaaah!)
+
+This ain't the desert dream you say it is,
+It's a rich kid cleanse and a startup biz.
+We’re choking on dust and irony,
+While you “find yourself” in luxury.
+Burning Man, you carbon scam,
+Just a wellness retreat with an Instagram.
+It’s a thousand-dollar porta-loo trust fall —
+And bro, it sucks for the rest of us all. (pshh!)
+
+No bikes, no clue, no water in hand,
+Just bear-guy-n dropouts lost in the sand.
+“Wo ist die techno?” they shout at the sky,
+But Function ain’t comin’ — don’t ask why.
+Shazam is banned, their shame is real,
+They only respect that German feel.
+Passed out cold near Robo Heart,
+Whining that Berlin had better art. (yaaaah!)
+
+They flew in on jets with organic fear,
+Sippin’ dust martinis while chanting “we’re here.”
+RVs parked like mobile ver-sigh,
+Boasting how “nothing” feels so high.
+Fiji showers and vibe butlers near,
+Wearing Moon Boots worth a fiscal year.
+“This is raw,” they say with a grin,
+From behind designer oxygen. (ugh!)
+
+“Don’t talk to me unless your art car’s LEED-certified.”
+“I only gift crypto vibes.”
+“That’s not dust, it’s ancestral data.”
+“My emotional support drone has solar panels.”
+“This dust is micro dosing me.”
+“You can’t manifest without a cactus enema.”
+“That’s not a tent — it’s a decompression pod.”
+“I saw Elon. He said my aura was scalable.”
+
+In ‘96 it was dust and fire,
+Now it’s influences building a brand empire.
+Rusted wagons, Reno plates,
+Cursing virgins at the gate.
+They hate your lights, they hate your sound,
+They miss when weirdos ran the town.
+“Songs need guitars!” they yell mid-spliff,
+Then flick you off with a tribal glyph. (yaaaah!)
+
+This ain’t the primal scream you claim it be,
+It's Coachella with worse hygiene. (ugh!)
+You’re bonding through dust and LED,
+While flexing your tent on NBC.
+Burning Man, you Fyre Fest clone,
+With a thousand influencers moaning “I'm home.”
+It’s a TED Talk wrapped in tribal funk —
+Just call it what it is: rich kid junk. (pshh!)
+
+They were summoned by the moons of Mars,
+With hemp-seed beats and healing scars.
+Bathing in vibes, skipping the soap,
+Microdosing and hugging hope.
+They call it “dusting a nut” out here,
+While smearing coconut oil on each ear.
+Preachin’ about plastic’s sin —
+Then snortin’ ket off a port-a-john bin.
+
+Heard the rumor in a rave in neese,
+Bought one ticket, no release.
+Showed up lost, no food, no plan,
+Dreams of Jamie XX in a dusty van.
+Croissant in hand, burnt to hell,
+Chain-smoked cigs with a patchouli smell.
+“Zis is Burning Man?” they ask, confused,
+As their hopes slowly bruised. (yaaaah!)
+
+Pack it in! Pack it out!
+But you forgot your Eurotrash doubt!
+Goggles on! Morals gone!
+Seven days, your brain is pawned!
+Radical what?! Radical where?!
+You burned a man — now you don’t care! (ugh!)
+
+So gather round the flame,
+Let’s burn away the shame.
+You came for truth and left with swag,
+You found your soul… and lost your bag.
+Dust to dust, and hype to hype —
+You came for the burn, but didn’t expect the bite.
+
+It was better last year.
+It’ll be worse next year.
+See you in the dust.
+(yaaaah!)
+My Cal Out!
       </pre>
     </section>
   </main>
@@ -64,6 +176,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
     "name": "Dust to Dust (The Playa Sucks)",
     "duration": "PT3M51S",
+    "position": 7,
     "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
@@ -71,18 +184,20 @@ Lyrics coming soon.
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Rock", "Burning Man"],
+    "genre": ["Folk", "Electronic", "Burning Man", "Satire"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/dust-to-dust.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
+    "description": "\"Dust to Dust (The Playa Sucks)\" is a sharp-edged roast of influencer culture, plug-and-play camps, and wellness-washed decadence on the Playa. It’s part love letter, part intervention, calling out the carbon scams, VIP tents, and rich-kid junk while still ending with the classic burner mantra: it was better last year.",
     "sameAs": [
       "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
     ],
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Welcome to Black Rock City.\nPopulation: 70,000 egos and one giant match. (yaaaah!)\n\nThey came for the ’Gram, left their brains at home,\nBombshell bras on a dust-swept roam.\nLatex boots in apocalypse heat,\nWorshipping tech bros for a VIP seat.\nChokers tight, and pupils wide,\nThey sparkle hard with no soul inside.\nSniffin’ GHB in the LED stew,\nSnappin’ pics with the Mayan Warrior crew. (yaaaah!)\n\nThis ain't the desert dream you say it is,\nIt's a rich kid cleanse and a startup biz.\nWe’re choking on dust and irony,\nWhile you “find yourself” in luxury.\nBurning Man, you carbon scam,\nJust a wellness retreat with an Instagram.\nIt’s a thousand-dollar porta-loo trust fall —\nAnd bro, it sucks for the rest of us all. (pshh!)\n\nNo bikes, no clue, no water in hand,\nJust bear-guy-n dropouts lost in the sand.\n“Wo ist die techno?” they shout at the sky,\nBut Function ain’t comin’ — don’t ask why.\nShazam is banned, their shame is real,\nThey only respect that German feel.\nPassed out cold near Robo Heart,\nWhining that Berlin had better art. (yaaaah!)\n\nThey flew in on jets with organic fear,\nSippin’ dust martinis while chanting “we’re here.”\nRVs parked like mobile ver-sigh,\nBoasting how “nothing” feels so high.\nFiji showers and vibe butlers near,\nWearing Moon Boots worth a fiscal year.\n“This is raw,” they say with a grin,\nFrom behind designer oxygen. (ugh!)\n\n“Don’t talk to me unless your art car’s LEED-certified.”\n“I only gift crypto vibes.”\n“That’s not dust, it’s ancestral data.”\n“My emotional support drone has solar panels.”\n“This dust is micro dosing me.”\n“You can’t manifest without a cactus enema.”\n“That’s not a tent — it’s a decompression pod.”\n“I saw Elon. He said my aura was scalable.”\n\nIn ‘96 it was dust and fire,\nNow it’s influences building a brand empire.\nRusted wagons, Reno plates,\nCursing virgins at the gate.\nThey hate your lights, they hate your sound,\nThey miss when weirdos ran the town.\n“Songs need guitars!” they yell mid-spliff,\nThen flick you off with a tribal glyph. (yaaaah!)\n\nThis ain’t the primal scream you claim it be,\nIt's Coachella with worse hygiene. (ugh!)\nYou’re bonding through dust and LED,\nWhile flexing your tent on NBC.\nBurning Man, you Fyre Fest clone,\nWith a thousand influencers moaning “I'm home.”\nIt’s a TED Talk wrapped in tribal funk —\nJust call it what it is: rich kid junk. (pshh!)\n\nThey were summoned by the moons of Mars,\nWith hemp-seed beats and healing scars.\nBathing in vibes, skipping the soap,\nMicrodosing and hugging hope.\nThey call it “dusting a nut” out here,\nWhile smearing coconut oil on each ear.\nPreachin’ about plastic’s sin —\nThen snortin’ ket off a port-a-john bin.\n\nHeard the rumor in a rave in neese,\nBought one ticket, no release.\nShowed up lost, no food, no plan,\nDreams of Jamie XX in a dusty van.\nCroissant in hand, burnt to hell,\nChain-smoked cigs with a patchouli smell.\n“Zis is Burning Man?” they ask, confused,\nAs their hopes slowly bruised. (yaaaah!)\n\nPack it in! Pack it out!\nBut you forgot your Eurotrash doubt!\nGoggles on! Morals gone!\nSeven days, your brain is pawned!\nRadical what?! Radical where?!\nYou burned a man — now you don’t care! (ugh!)\n\nSo gather round the flame,\nLet’s burn away the shame.\nYou came for truth and left with swag,\nYou found your soul… and lost your bag.\nDust to dust, and hype to hype —\nYou came for the burn, but didn’t expect the bite.\n\nIt was better last year.\nIt’ll be worse next year.\nSee you in the dust.\n(yaaaah!)\nMy Cal Out!"
     }
   }
   </script>
