--- a/albums/ashes-and-echoes/tracks/sparkle-pony.html
+++ b/albums/ashes-and-echoes/tracks/sparkle-pony.html
@@ -1,90 +1,131 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sparkle Pony | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Sparkle Pony is a playful electro-pop ride celebrating glitter, gifts, and learning the ropes.">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <meta charset="utf-8">
+  <title>Sparkle Pony – Mycal</title>
   <link rel="stylesheet" href="/assets/css/style.css">
-</head>
-<body>
-  <header>
-    <nav class="navbar" aria-label="Primary">
-      <a class="logo" href="/">
-        <span>music.mycal.net</span>
-      </a>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
-      </div>
-    </nav>
-  </header>
 
-  <main>
-    <section class="hero">
-      <img src="/assets/img/tracks/sparkle-pony.jpg" alt="Cover art for Sparkle Pony">
-      <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 8</p>
-        <h1>Sparkle Pony</h1>
-        <p>A bright synth jam that turns the term of endearment into a badge of honor.</p>
-        <div class="button-row">
-          <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
-          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section" aria-labelledby="lyrics-heading">
-      <h2 id="lyrics-heading">Lyrics</h2>
-      <pre class="lyrics-block">
-Lyrics coming soon.
-      </pre>
-    </section>
-  </main>
-
-  <footer>
-    <div class="footer-inner">
-      <div>© 2025 Mycal Music</div>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/">Home</a>
-      </div>
-    </div>
-  </footer>
-
+  <!-- JSON-LD for this track -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
     "name": "Sparkle Pony",
-    "duration": "PT3M8S",
-    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Pop", "Burning Man"],
+    "duration": "PT3M8S",
+    "position": 8,
+    "genre": ["Folk", "Electronic", "Burning Man", "Satire"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/sparkle-pony.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
+    "description": "\"Sparkle Pony\" is a glitter-bomb character study told from the Sparkle Pony’s own POV — chopper drop-offs, billionaire art-car backdrops, designer oxygen, and 24-hour clout cycles. It’s a playful, biting riff on the most extra kind of Playa tourist.",
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony"
     }
   }
   </script>
+</head>
+<body>
+  <main class="track-page">
+    <header class="track-header">
+      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
+      <h1>Sparkle Pony</h1>
+      <p>Track 8 · 3:08 · Ashes and Echoes — Songs from the Playa</p>
+    </header>
+
+    <section class="track-media">
+      <img src="/assets/img/tracks/sparkle-pony.jpg"
+           alt="Cover art for Sparkle Pony"
+           class="track-image">
+
+      <div class="track-links">
+        <!-- Replace these href values with real links -->
+        <a href="#" class="btn">Listen on Spotify</a>
+        <a href="#" class="btn">Bandcamp</a>
+        <a href="#" class="btn">YouTube Music</a>
+      </div>
+    </section>
+
+    <section class="track-description">
+      <h2>About this track</h2>
+      <p>
+        “Sparkle Pony” is a satire sung from the Sparkle Pony’s own throne — chopper drops, billionaire
+        audiences, filters, clout, and a 24-hour dust runway before wheels up. It’s both roast and
+        portrait: the Playa as backdrop for one more glitter-drenched personal brand.
+      </p>
+    </section>
+
+    <section class="lyrics">
+      <h2>Lyrics</h2>
+      <pre>
+Whop-whop-whop, I’m here to slay...
+
+Chopper drops me, hear the hum, 
+Playa’s red carpet, here I come. 
+Dressed in shine, no dust on me, 
+Selfie throne’s my destiny. 
+Billionaires can’t look away, 
+Art cars frame my big display. 
+Snap that shot, I’m here to slay, 
+Sparkle Pony’s born today!
+
+I’m the Sparkle Pony, watch me glow, 
+Playa’s my runway, steal the show. 
+Flash my grin for Insta’s crown, 
+Burning Man’s my playground now!
+
+(Ooh-oh-oh) Sparkle Pony, queen supreme, 
+(Ooh-oh-oh) Glitter reigns, my perfect dream, 
+(Ooh-oh-oh) Strut and shine, then I’m gone, 
+Sparkle Pony, rule the dawn!
+
+Neon glow’s my spotlight beam, 
+Billionaires chase my scene. 
+“Move aside—fuck your burn!” I yell, 
+Playa’s mine, can’t you tell? 
+Filters pop, my vibe’s the best, 
+Dust’s for losers, I’m the quest. 
+Twenty-four, then jet off high, 
+Sparkle Pony owns the sky!
+
+I’m the Sparkle Pony, watch me glow, 
+Playa’s my runway, steal the show. 
+Flash that grin for selfie clout, 
+Burning Man’s my spotlight shout!
+
+Crowd’s in awe, I’ve set the trend, 
+Glitter’s gold, my reign won’t end. 
+Playa bows beneath my feet, 
+Sparkle Pony can’t be beat! 
+Jet revs up, I’m out in style, 
+Burning Man’s my victory mile!
+
+I’m the Sparkle Pony, watch me glow, 
+Playa my runway, steal the show. 
+Flash that grin for likes galore, 
+Burning Man’s my glitter war!
+
+(Ooh-oh-oh) Sparkle Pony, queen supreme, 
+(Ooh-oh-oh) Glitter reigns, my perfect dream, 
+(Ooh-oh-oh) Strut and jet, I’m outta sight, 
+Sparkle Pony, burn so bright!
+
+(Ooh-oh-oh) Sparkle Pony, queen supreme, 
+(Ooh-oh-oh) Glitter reigns, my perfect dream, 
+(Ooh-oh-oh) Strut and jet, I’m outta sight, 
+Sparkle Pony, burn so bright!
+      </pre>
+    </section>
+  </main>
 </body>
 </html>
