Add full Buck Bandersnatch track page

--- a/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
+++ b/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
@@ -1,90 +1,134 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Buck Bandersnatch Song (Playa Dreams) | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="The Buck Bandersnatch Song (Playa Dreams) is a whimsical folk tale about imaginary creatures roaming the open playa.">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <meta charset="utf-8">
+  <title>The Buck Bandersnatch Song (Playa Dreams) – Mycal</title>
+  <meta name="description" content="\"The Buck Bandersnatch Song (Playa Dreams)\" wanders through Wunjo runes, tarot pulls, JuPlaya nights, and temple whispers to find joy beyond the burn.">
   <link rel="stylesheet" href="/assets/css/style.css">
-</head>
-<body>
-  <header>
-    <nav class="navbar" aria-label="Primary">
-      <a class="logo" href="/">
-        <span>music.mycal.net</span>
-      </a>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
-      </div>
-    </nav>
-  </header>
 
-  <main>
-    <section class="hero">
-      <img src="/assets/img/tracks/buck-bandersnatch-song.jpg" alt="Cover art for The Buck Bandersnatch Song (Playa Dreams)">
-      <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 9</p>
-        <h1>The Buck Bandersnatch Song (Playa Dreams)</h1>
-        <p>A campfire waltz with mandolins and whistles about chasing myths in moonlit dust.</p>
-        <div class="button-row">
-          <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
-          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section" aria-labelledby="lyrics-heading">
-      <h2 id="lyrics-heading">Lyrics</h2>
-      <pre class="lyrics-block">
-Lyrics coming soon.
-      </pre>
-    </section>
-  </main>
-
-  <footer>
-    <div class="footer-inner">
-      <div>© 2025 Mycal Music</div>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/">Home</a>
-      </div>
-    </div>
-  </footer>
-
+  <!-- JSON-LD for this track -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
     "name": "The Buck Bandersnatch Song (Playa Dreams)",
-    "duration": "PT3M14S",
-    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Folk", "Burning Man"],
+    "duration": "PT3M14S",
+    "position": 9,
+    "genre": ["Folk", "Electronic", "Burning Man", "Temple Song"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/buck-bandersnatch-song.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
+    "description": "\"The Buck Bandersnatch Song (Playa Dreams)\" is a rune-soaked, temple-whisper track about Wunjo, surrender, JuPlaya, and the thin line between ending and beginning. It wanders through runes, tarot, cigarette rituals and desert omens, looking for joy on the other side of the burn.",
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song"
     }
   }
   </script>
+</head>
+<body>
+  <main class="track-page">
+    <header class="track-header">
+      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
+      <h1>The Buck Bandersnatch Song (Playa Dreams)</h1>
+      <p>Track 9 · 3:14 · Ashes and Echoes — Songs from the Playa</p>
+    </header>
+
+    <section class="track-media">
+      <img src="/assets/img/tracks/buck-bandersnatch-song.jpg"
+           alt="Cover art for The Buck Bandersnatch Song (Playa Dreams)"
+           class="track-image">
+
+      <div class="track-links">
+        <!-- Replace these href values with real links -->
+        <a href="#" class="btn">Listen on Spotify</a>
+        <a href="#" class="btn">Bandcamp</a>
+        <a href="#" class="btn">YouTube Music</a>
+      </div>
+    </section>
+
+    <section class="track-description">
+      <h2>About this track</h2>
+      <p>
+        “The Buck Bandersnatch Song (Playa Dreams)” drifts through runes, tarot pulls, JuPlaya nights
+        and temple cloth embers. It’s a whispered confession about surrender and joy, etched in Wunjo,
+        dust, and the sense that the Playa might be ending something — or starting something entirely
+        new.
+      </p>
+    </section>
+
+    <section class="lyrics">
+      <h2>Lyrics</h2>
+      <pre>
+(mmm), (yeah),  JOY!
+
+Woke up with a ember on the temple cloth
+Not an i, it was j  and Joy spoke soft
+WUNJO carved in the dust with my hand
+ᚹ in the flame, I try to understand
+
+I got no paper, no plan, no pay
+But I got this dust, and I got this way
+The Playa knows — and the Playa speaks
+She draws back the curtain, she kisses my cheek
+(ply-uhhh...)(joy!) (yeah...) (joy!)
+
+JuPlaya, strong reception, man
+Dick-cunt glistening, gods in the sand
+Runes fell like thunder, called me “slave”
+But I listened deep and I tried to be brave
+
+The tarot's a mirror, the rune is the stone
+I fell for a woman who made me go home
+She called herself Heartsong, and I got clean
+She found her Leo, and I found my dream
+
+“Commeth the hour, commeth the man…”
+I burned the cash, I broke the plan
+I saw the signs, and I let them in
+I met the storm, I met my kin
+
+The Playa knows — and the Playa gives
+Everything you are, and everything that lives
+We build, we break, we burn, we bend
+But fuck it, my friend, this might be the end
+or the start... (mmm...) (joy!)
+
+INGWAZ on its side, Tiwaz on my chest
+Thurisaz on my belly, I gave it my best
+Frozen year cycle, portal at the table
+Fire shouts random, if you’re willing and able
+
+Snakes and moonlight, cigarettes and screams
+Mario Kart countdown in ritual dreams
+Had to have a sit, let the stone speak clear
+It said: “Joy lives in surrender, my dear”
+
+So maybe I’m dying, or maybe I’m free
+Maybe I’m nothing — maybe I’m me
+I’ll be in sunlight, or I’ll be in shade
+But I’ll be on Playa…where legends are made
+
+501 more to go, the dust don’t lie
+Get your shit together — look to the sky
+This may be it, or the start of more
+But the temple’s whispering…like it did before…
+
+WUNJO...
+find your joy again..
+Let go...
+      </pre>
+    </section>
+  </main>
 </body>
 </html>
