--- a/albums/ashes-and-echoes/tracks/ash-and-echoes.html
+++ b/albums/ashes-and-echoes/tracks/ash-and-echoes.html
@@ -1,90 +1,131 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ash and Echoes (The Temple Song) | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Ash and Echoes (The Temple Song) is a cinematic ballad for sunrise at the Temple burn.">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <meta charset="utf-8">
+  <title>Ash and Echoes (The Temple Song) – Mycal</title>
   <link rel="stylesheet" href="/assets/css/style.css">
-</head>
-<body>
-  <header>
-    <nav class="navbar" aria-label="Primary">
-      <a class="logo" href="/">
-        <span>music.mycal.net</span>
-      </a>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
-      </div>
-    </nav>
-  </header>
 
-  <main>
-    <section class="hero">
-      <img src="/assets/img/tracks/ash-and-echoes.jpg" alt="Cover art for Ash and Echoes (The Temple Song)">
-      <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 10</p>
-        <h1>Ash and Echoes (The Temple Song)</h1>
-        <p>Slow-burning synths and deep drums carrying a farewell chorus for those we remember.</p>
-        <div class="button-row">
-          <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
-          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section" aria-labelledby="lyrics-heading">
-      <h2 id="lyrics-heading">Lyrics</h2>
-      <pre class="lyrics-block">
-Lyrics coming soon.
-      </pre>
-    </section>
-  </main>
-
-  <footer>
-    <div class="footer-inner">
-      <div>© 2025 Mycal Music</div>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/">Home</a>
-      </div>
-    </div>
-  </footer>
-
+  <!-- JSON-LD for this track -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
     "name": "Ash and Echoes (The Temple Song)",
-    "duration": "PT3M43S",
-    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Electronic", "Burning Man"],
+    "duration": "PT3M43S",
+    "position": 10,
+    "genre": ["Folk", "Electronic", "Burning Man", "Temple Song"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/ash-and-echoes.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
+    "description": "\"Ash and Echoes (The Temple Song)\" is a slow, reverent walk through the Temple — names on wood, grief in dust, and the moment when fire turns it all into something lighter. It holds the quiet side of the burn: the place where we leave what we can’t carry home.",
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes"
     }
   }
   </script>
+</head>
+<body>
+  <main class="track-page">
+    <header class="track-header">
+      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
+      <h1>Ash and Echoes (The Temple Song)</h1>
+      <p>Track 10 · 3:43 · Ashes and Echoes — Songs from the Playa</p>
+    </header>
+
+    <section class="track-media">
+      <img src="/assets/img/tracks/ash-and-echoes.jpg"
+           alt="Cover art for Ash and Echoes (The Temple Song)"
+           class="track-image">
+
+      <div class="track-links">
+        <a href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" class="btn">Listen on Spotify</a>
+        <a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes" class="btn">Bandcamp</a>
+        <a href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" class="btn">YouTube Music</a>
+      </div>
+    </section>
+
+    <section class="track-description">
+      <h2>About this track</h2>
+      <p>
+        “Ash and Echoes (The Temple Song)” is the quiet center of the album — a hymn for the Temple,
+        where feathers, photos, names and dust all meet the fire. It follows the walk in, the burn,
+        and the strange lightness that comes after we let go of what we could never quite say out loud.
+      </p>
+    </section>
+
+    <section class="lyrics">
+      <h2>Lyrics</h2>
+      <pre>
+(mmm-hmm...)
+
+Dust on my boots, sun on my face
+Carrying names through this sacred space
+A thousand hearts stitched into wood
+Burning what words never could
+
+Wind sings low where silence stays
+I trace the loss in lines and names
+Every tear a story told
+In the cracks of the Temple’s soul
+(yeah…)
+
+Some came to grieve, some came to pray
+Some just needed to give it away
+(whoah...)
+
+Ash and echoes in the sky
+Let it rise, let it fly
+What we couldn’t carry home
+We leave in flame and leave alone
+No judgment here, no need to speak
+The Temple knows what we all seek
+
+Ash and echoes — let 'em rise
+And settle back into the Playa’s sigh
+(ohhh… mmm-hmm)
+
+Feathers, photos, notes and dust
+Built with grief, and built with trust
+She stands for those we’ve had to lose
+And everything we didn’t choose
+
+We walk in quiet, line by line
+Each soul a story left behind
+A hush beneath the stars so wide
+As if the whole world paused to cry
+(whoah… yeah…)
+
+Ash and echoes in the sky
+Let it rise, let it fly
+What we couldn’t carry home
+We leave in flame and leave alone
+
+Ash and echoes — let 'em rise
+And settle back into the Playa's sigh
+Ash and echoes — burn and fly
+Become the dust beneath the sky
+(mmm-hmm…)
+
+And when the fire takes her form
+We are lighter than before
+She falls in grace, and we are new
+Ashes carried into truth
+
+Now she lives beneath our feet
+In the dust where silence speaks
+      </pre>
+    </section>
+  </main>
 </body>
 </html>
