Add lyrics for Fighting Wasn't Working

--- a/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html
+++ b/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html
@@ -42,7 +42,18 @@
     <section class="section" aria-labelledby="lyrics-heading">
       <h2 id="lyrics-heading">Lyrics</h2>
       <pre class="lyrics-block">
-Lyrics coming soon.
+Fighting wasn't working
+So I chose to ride the wave
+
+(Yeeeeeahhhh)
+
+back
+*smash* *bang*
+(whoo-ahhhh)
+
+(Yeeeeeahhhh)
+
+マイカ--ル
       </pre>
     </section>
   </main>
@@ -82,7 +93,7 @@ Lyrics coming soon.
     ],
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Fighting wasn't working\nSo I chose to ride the wave\n\n(Yeeeeeahhhh)\n\nback\n*smash* *bang*\n(whoo-ahhhh)\n\n(Yeeeeeahhhh)\n\nマイカ--ル"
     }
   }
   </script>
