Add full Overheard at Burning Man track content

--- a/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
+++ b/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Overheard at Burning Man | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Overheard at Burning Man stitches real camp conversations into a spoken-word soundscape.">
+  <meta name="description" content="A spoken-word walk through Black Rock City's subconscious — DPW one-liners, techno mantras, medic tent confessions, influencer absurdities, and temple whispers stitched into one dusty eavesdrop.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -29,9 +29,9 @@
     <section class="hero">
       <img src="/assets/img/tracks/overheard-at-burning-man.jpg" alt="Cover art for Overheard at Burning Man">
       <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 11</p>
+        <p class="meta">Ashes and Echoes — Track 11 · 6:44</p>
         <h1>Overheard at Burning Man</h1>
-        <p>Field recordings, whispered samples, and beat poetry pulled from playa conversations.</p>
+        <p>“Overheard at Burning Man” is a spoken-word walk through Black Rock City’s subconscious — DPW one-liners, techno snob mantras, medic tent confessions, influencer absurdities, and temple whispers stitched into one long dust-soaked eavesdrop.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
@@ -39,10 +39,108 @@
       </div>
     </section>
 
+    <section class="section" aria-labelledby="about-heading">
+      <h2 id="about-heading">About this track</h2>
+      <p>
+        “Overheard at Burning Man” drifts through camps, art cars, medic tents, DJ booths and the
+        Temple, collecting the weird, raw, and unguarded things people say when they think no one’s
+        really listening. It’s the Playa’s group mind, cut up and played back as one long, dusty
+        confession.
+      </p>
+    </section>
+
     <section class="section" aria-labelledby="lyrics-heading">
       <h2 id="lyrics-heading">Lyrics</h2>
       <pre class="lyrics-block">
-Lyrics coming soon.
+Walk with me.
+Past the blinking bikes, the glowing towers, the fire-belching dragon.
+Open your ears.
+This is what the dust says—
+when no one knows they’re being heard.
+
+"It ain’t the dust — it’s the amateurs that’ll kill you."
+"You don’t join DPW. You survive it."
+"No one’s in charge. Everyone’s in denial."
+"If it ain’t on fire, it ain’t our problem."
+"DPW. No gods. No bosses. Just tools."
+
+All hail The Builders:
+They arrive when the desert still sleeps.
+They drag steel from silence, wrench shade from sky.
+Rusted saints in Carhartt robes.
+Calloused hands, sharp tongues.
+Their gospel? Get it done.
+
+The Sonic Shamans don’t DJ — they summon.
+"This BPM is off by two and I can feel it."
+"This isn’t a DJ set — it’s a frequency exorcism."
+"Bassline therapy is in session."
+"Don’t touch the mixer. Touch the moment."
+"This track is goodbye."
+
+Art Car DJs bring the party to you — whether you're ready or not.
+They ride dragons with speakers for teeth.
+Looping spells in one twenty eight Beats Per Minute.
+You don’t dance to the beat—
+You surrender to it.
+
+"Influencer Ponies, Radical self-expression — optimized for engagement."
+"Do I look radically inclusive in this filter?"
+"Wait, pose again—my aura was blinking."
+"I found myself… in my comment section."
+"Radical self-expression… but curated."
+"This outfit has more philosophy than fabric."
+
+Sparkle Kids, Radical self-expression, plus accidental magic.
+They shimmer like mirages.
+Filtered saints in mirror visors.
+Searching for signal in a sea of dust.
+Broadcasting beauty, pixel by pixel.
+
+Tech Bros, Seeking enlightenment with backend scale a BILL it tee.
+"I merged with the vibe mainframe."
+"You’re not broke — you’re energetically blocked."
+"I coded my own enlightenment."
+"Blockchain meets chakras, bro."
+"This start up is spiritual."
+
+They pitch apps from hammocks.
+They charge crystals and seed funding.
+Hustling transcendence, version 3 point oh
+
+Welcome to the Medic Tent, It’s not a clinic. It’s a confessional.
+"I came in for a blister, stayed for an existential unraveling."
+"The IV drip gave me electrolytes and forgiveness."
+"The medic held my hand like they’d done it before—lifetimes ago."
+"I thought it was sunstroke. It was soul-stroke."
+"This isn’t a triage tent. It’s a forgiveness chamber."
+"They gave me gauze for the wound — and silence for the rest."
+"I walked in broken. I walked out burning."
+
+Temple and the Healing
+Some wounds are made of memory.
+Some burns are chosen.
+The Playa doesn’t judge your broken parts—
+It dances with them.
+And then, it lets them go.
+
+I have a Confession
+"I saluted the effigy. Then I danced with ghosts."
+"We rode the Shark Car into our own subconscious."
+"I align my chakras with the bassline."
+"I saw god—and they DJ sunrise sets."
+"This isn’t over — it’s a beginning"
+"You came here to meet yourself — dusty and divine."
+
+The wind carries voices.
+Some make sense.
+Some make art.
+Some just leave traces you can’t explain
+
+So listen…
+Not just with your ears—
+But with whatever's left of your soul
+after the burn.
       </pre>
     </section>
   </main>
@@ -64,6 +162,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
     "name": "Overheard at Burning Man",
     "duration": "PT6M44S",
+    "position": 11,
     "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
@@ -71,18 +170,17 @@ Lyrics coming soon.
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Spoken Word", "Burning Man"],
+    "genre": ["Spoken Word", "Electronic", "Burning Man"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/overheard-at-burning-man.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
+    "description": "\"Overheard at Burning Man\" is a spoken-word walk through Black Rock City’s subconscious — DPW one-liners, techno snob mantras, medic tent confessions, influencer absurdities, and temple whispers stitched into one long dust-soaked eavesdrop.",
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man"
     }
   }
   </script>
