Add No Authority Night Crew lyrics

--- a/albums/ashes-and-echoes/tracks/no-authority-night-crew.html
+++ b/albums/ashes-and-echoes/tracks/no-authority-night-crew.html
@@ -29,7 +29,7 @@
     <section class="hero">
       <img src="/assets/img/tracks/no-authority-night-crew.jpg" alt="Cover art for No Authority Night Crew">
       <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 13</p>
+        <p class="meta">Ashes and Echoes — Track 13 · 2:41</p>
         <h1>No Authority Night Crew</h1>
         <p>Low-end grooves and whispered vocals dedicated to Rangers, lamplighters, and late-night helpers.</p>
         <div class="button-row">
@@ -42,7 +42,7 @@
     <section class="section" aria-labelledby="lyrics-heading">
       <h2 id="lyrics-heading">Lyrics</h2>
       <pre class="lyrics-block">
-Lyrics coming soon.
+No Authority Night Crew (ooooh Yaaaa)
       </pre>
     </section>
   </main>
@@ -82,7 +82,7 @@ Lyrics coming soon.
     ],
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "No Authority Night Crew (ooooh Yaaaa)"
     }
   }
   </script>
